<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="4dp"
    app:cardBackgroundColor="@color/gray"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/newsFeedImageView"
            android:scaleType="centerCrop"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newsFeedHeadingText"
            android:layout_below="@id/newsFeedImageView"
            android:textColor="@color/yellow"
            android:text="@string/heading_text"
            android:textStyle="bold"
            android:textSize="18sp"
            android:padding="3dp"
            android:maxLines="2"
            android:layout_margin="3dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/newsFeedHeadingText"
            android:text="@string/brief_text"
             android:textColor="@color/white"
            android:maxLines="3"
            android:layout_margin="3dp"
            android:padding="3dp"
            android:id="@+id/newsFeedBriefIntro"
            />
    </RelativeLayout>

</androidx.cardview.widget.CardView>