<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_shade_1"
    tools:context=".Activity.NewsDetailsActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_shade_1"
        app:titleTextColor="@color/yellow"
        app:title="Daily News"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/readButton"
        android:layout_below="@id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/idIVNews"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="3dp"
                android:contentDescription="@string/todo"
                android:padding="3dp"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/idTVTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/idIVNews"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:padding="4dp"
                android:text="@string/titleBar"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/idSubDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/idTVTitle"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:padding="4dp"
                android:text="@string/sub_description"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/idContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/idSubDesc"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:padding="4dp"
                android:text="@string/content"
                android:textColor="@color/white" />

        </RelativeLayout>

    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/read_full_news"
        app:backgroundTint="@color/yellow"
        android:textAllCaps="false"
        android:id="@+id/readButton"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"/>

</RelativeLayout>